# USync

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
assets/: com.usync.app.desktop.metainfo.xml  com.usync.app.metainfo.xml  usync-app.desktop
debian/: changelog  control  rules  usync-app.install
src/: lib.rs  main.rs
src/usync_app/: __init__.py  cli.py  core.py  gui.py  main.py
tests/: test_cli.py  test_core.py
