[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usync-app"
version = "0.1.0"
description = "Simple Ubuntu application with both CLI and GUI"
readme = "README.md"
authors = [{name = "USync Maintainers"}]
requires-python = ">=3.10"

[project.scripts]
usync-app = "usync_app.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
